adding scss and fonts

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,24 @@
 ---
 ---
+
+// settings
+@import "fonts";
+@import "settings";
+
+// Tools
+@import "mixins";
+
+// Generic
 @import "reset";
-@import "main";
+
+// Elements
+@import "elements";
+
+// Objects
+
+// Components
+
+// Templates
+@import "app";
+
+// Utilities
