--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -7,16 +7,13 @@
 }
 
 .hero__bg {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-position: 50% 50%;
-    background-size: cover;
+    @include full(absolute);
+    @include bg(cover);
 }
 
 .hero__txt {
     position: relative;
-    font-size: 100px;
-    font-weight: bold;
+    font-size: 9vw;
+    font-weight: 900;
     color: #fff;
 }
