--- a/_sass/settings.scss
+++ b/_sass/settings.scss
@@ -40,18 +40,7 @@ $quarter-gutter:			$grid-gutter-width / 4;
         Fonts
 --------------------*/
 
-$txt-1:  12px;
-$txt-2:  14px;
-$txt-3:  16px;
-$txt-4:  18px;
-$txt-5:  24px;
-$txt-6:  32px;
-$txt-7:  40px;
-$txt-8:  48px;
-$txt-9:  60px;
-$txt-10: 72px;
-
-$sans-serif: 'ziris', helvetica, arial, sans-serif;
+$sans-serif: 'Ziris', helvetica, arial, sans-serif;
 $serif: 'Crimson Text', georgia, times, serif;
 
 $lh-copy: 1.5;
