--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -9,21 +9,21 @@
 
 // custom font
 @font-face {
-	font-family: 'ziris';
+	font-family: 'Ziris';
 	src: url('/assets/fonts/500.ttf');
 	font-weight: 500;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: 'ziris';
+	font-family: 'Ziris';
 	src: url('/assets/fonts/700.ttf');
 	font-weight: 700;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: 'ziris';
+	font-family: 'Ziris';
 	src: url('/assets/fonts/900.ttf');
 	font-weight: 900;
 	font-style: normal;
