--- a/_sass/settings.variables.scss
+++ b/_sass/settings.variables.scss
@@ -69,3 +69,17 @@ $grey-6: mix($white, $dark, 60%);
 $grey-7: mix($white, $dark, 70%);
 $grey-8: mix($white, $dark, 80%);
 $grey-9: mix($white, $dark, 90%);
+
+
+
+/*-------------------
+        Shadows
+--------------------*/
+
+$box-shadow-soft:			0 4px 32px rgba($black, 0.1);
+$box-shadow-medium:			0 4px 32px rgba($black, 0.16);
+$box-shadow-hard:			0 4px 32px rgba($black, 0.24);
+
+$text-shadow-1:				1px 1px 0 rgba($black, 0.5);
+$text-shadow-2:				0 0 50px rgba($black, 0.15), 1px 1px 0 rgba($black, 0.3);
+$text-shadow-3: 			1px 1px 0 rgba($black, 0.35), 0 0 30px rgba($black, 0.25);
