--- a/_sass/objects.layout.scss
+++ b/_sass/objects.layout.scss
@@ -1,3 +1,7 @@
+.content {
+    padding-top: $header-height;
+}
+
 .container {
     padding: 0 $gutter;
     @include md {
@@ -10,13 +14,11 @@
     margin: 0 auto;
 }
 
-.full-center {
+.center {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
-    height: 100vh;
 }
 
 .full-bg {
