--- a/_sass/settings.variables.scss
+++ b/_sass/settings.variables.scss
@@ -83,3 +83,11 @@ $box-shadow-hard:			0 4px 32px rgba($black, 0.24);
 $text-shadow-1:				1px 1px 0 rgba($black, 0.5);
 $text-shadow-2:				0 0 50px rgba($black, 0.15), 1px 1px 0 rgba($black, 0.3);
 $text-shadow-3: 			1px 1px 0 rgba($black, 0.35), 0 0 30px rgba($black, 0.25);
+
+
+
+/*-------------------
+        Misc
+--------------------*/
+
+$header-height: 60px;
