adjust header height

--- a/_sass/settings.variables.scss
+++ b/_sass/settings.variables.scss
@@ -91,3 +91,4 @@ $text-shadow-3: 			1px 1px 0 rgba($black, 0.35), 0 0 30px rgba($black, 0.25);
 --------------------*/
 
 $header-height: 60px;
+$header-height-md: 80px;
