--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,8 @@
 
 <body>
 
-    {% include header.html %}
-
-    <div class="content">
+    <div class="app">
+        {% include header.html %}
         {{ content }}
     </div>
 
