--- a/_sass/tools.mixins.scss
+++ b/_sass/tools.mixins.scss
@@ -28,16 +28,19 @@
 @mixin sm { @media (min-width: $sm) { @content; }}
 @mixin md { @media (min-width: $md) { @content; }}
 @mixin lg { @media (min-width: $lg) { @content; }}
+@mixin xl { @media (min-width: $xl) { @content; }}
 
 // max-width breakpoints
 @mixin xs-max { @media (max-width: $xs) { @content; }}
 @mixin sm-max { @media (max-width: $sm) { @content; }}
 @mixin md-max { @media (max-width: $md) { @content; }}
 @mixin lg-max { @media (max-width: $lg) { @content; }}
+@mixin xl-max { @media (max-width: $xl) { @content; }}
 
 // exclusive breakpoints (min-max)
 @mixin sm-ex { @media (min-width: $sm) and (max-width: $md) { @content; }}
 @mixin md-ex { @media (min-width: $md) and (max-width: $lg) { @content; }}
+@mixin lg-ex { @media (min-width: $lg) and (max-width: $xl) { @content; }}
 
 
 
