add section art and discover scroll indicator

--- a/_sass/settings.fonts.scss
+++ b/_sass/settings.fonts.scss
@@ -28,3 +28,10 @@
 	font-weight: 900;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'Ziris';
+	src: url('/assets/fonts/900i.ttf');
+	font-weight: 900;
+	font-style: italic;
+}
