--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
     <div class="app">
         {% include header.html %}
         {{ content }}
+        {% include footer.html %}
     </div>
 
     <!-- JAVASCRIPT -->
