--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,11 +23,11 @@
 
 <body class="{{ page.body }}">
 
-    <div class="app">
+    <main class="app">
         {% include header.html %}
         {{ content }}
         {% include footer.html %}
-    </div>
+    </main>
 
     <!-- JAVASCRIPT -->
     <script src="/assets/js/plugins.bundle.min.js"></script>
