--- a/_sass/templates.app.scss
+++ b/_sass/templates.app.scss
@@ -450,6 +450,12 @@
     }
 }
 
+.courses__container {
+    border-top: 1px solid $grey-8;
+    background-color: $grey-9;
+    min-height: 50vh;
+}
+
 
 
 // misc
