--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <div class="header__logo" include="/assets/img/logo-ziris.svg"></div>
         </a>
         <nav class="header__nav">
-            {% for nav in site.data.app.nav %}
+            {% for nav in site.data.navigation %}
             <span class="header__item {{ nav.mod }}"><a href="{{ nav.url }}">{{ nav.title }}</a></span>
             {% endfor %}
         </nav>
