--- a/_sass/templates.app.scss
+++ b/_sass/templates.app.scss
@@ -456,7 +456,15 @@
 }
 
 .courses__category {
-    padding: $double-gutter 0;
+    padding: $triple-gutter 0;
+}
+
+.courses__category-title {
+    margin-bottom: $gutter;
+    @include font(18px, 600, $lh-title);
+    color: $grey-5;
+    text-transform: uppercase;
+    letter-spacing: 3px;
 }
 
 .courses__grid {
@@ -466,23 +474,63 @@
     @include sm {
         grid-template-columns: repeat(2, 1fr);
     }
-    @include md {
+    @include lg {
         grid-template-columns: repeat(3, 1fr);
     }
 }
 
+
+
+// tile
+// --------------------------------------------------
 .tile {
     background-color: $light;
+    border-radius: 2px;
 }
 
 .tile__img {
     object-fit: cover;
     width: 100%;
-    height: 16vw;
+    height: 240px;
+    border-radius: 2px 2px 0 0;
 }
 
 .tile__txt {
     padding: $half-gutter $gutter $gutter;
+}
+
+.tile__title {
+    margin-bottom: $gutter;
+    @include font(36px, 900, $lh-title);
+    color: $brand;
+}
+
+.tile__amount {
+    margin-bottom: 8px;
+    @include font(12px, 700, $lh-title);
+    color: $brand;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.tile__description {
+    margin-bottom: $half-gutter;
+    font-family: serif;
+    @include font(18px, normal, $lh-copy);
+    color: $grey-2;
+}
+
+.tile__price {
+    @include font(40px, 500, $lh-title);
+    color: $brand;
+}
+
+
+
+// course detail page
+// --------------------------------------------------
+.course-detail {
+    padding-top: 100px;
 }
 
 
