adding thumbnail | setup header for post

--- a/_includes/tile.html
+++ b/_includes/tile.html
@@ -1,6 +1,6 @@
 <li class="tile">
     <a href="{{ course.url }}">
-        <img class="tile__img" src="/assets/img/{{ course.img }}" />
+        <img class="tile__img" src="/assets/img/{{ course.img }}-thumb.jpg" />
         <div class="tile__txt">
             <h3 class="tile__title">{{ course.title }}</h3>
             <div class="tile__amount">{{ course.amount }}</div>
