--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         </a>
         <nav class="header__nav">
             {% for nav in site.data.navigation %}
-            <span class="header__item {{ nav.mod }}"><a href="{{ nav.url }}">{{ nav.title }}</a></span>
+            <a href="{{ nav.url }}"><span class="header__item {{ nav.mod }}">{{ nav.title }}</span></a>
             {% endfor %}
         </nav>
     </div>
