--- a/_includes/tile.html
+++ b/_includes/tile.html
@@ -1,11 +1,7 @@
-<li class="tile">
-    <a href="{{ course.url }}">
-        <img class="tile__img" src="/assets/img/{{ course.img }}-thumb.jpg" />
-        <div class="tile__txt">
-            <h3 class="tile__title">{{ course.title }}</h3>
-            <div class="tile__amount">{{ course.amount }}</div>
-            <p class="tile__description">{{ course.description }}</p>
-            <div class="tile__price">{{ course.price }}</div>
-        </div>
-    </a>
-</li>
+<a class="tile" href="{{ course.url }}">
+    <img class="tile__img" src="/assets/img/{{ course.img }}-thumb.jpg" />
+    <h3 class="tile__title">{{ course.title }}</h3>
+    <div class="tile__amount">{{ course.amount }}</div>
+    <p class="tile__description">{{ course.description }}</p>
+    <div class="tile__price">{{ course.price }}</div>
+</a>
