--- a/_includes/tile.html
+++ b/_includes/tile.html
@@ -1,7 +1,11 @@
 <a class="tile" href="{{ course.url }}">
     <img class="tile__img" src="/assets/img/{{ course.img }}-thumb.jpg" />
-    <h3 class="tile__title">{{ course.title }}</h3>
-    <div class="tile__amount">{{ course.amount }}</div>
-    <p class="tile__description">{{ course.description }}</p>
-    <div class="tile__price">{{ course.price }}</div>
+    <header class="tile__header">
+        <h3 class="tile__title">{{ course.title }}</h3>
+    </header>
+    <div class="tile__txt">
+        <div class="tile__amount">{{ course.amount }}</div>
+        <p class="tile__description">{{ course.description }}</p>
+        <div class="tile__price">{{ course.price }}</div>
+    </div>
 </a>
