--- a/_includes/tile.html
+++ b/_includes/tile.html
@@ -1,11 +1,11 @@
-<a class="tile" href="{{ course.url }}">
-    <img class="tile__img" src="/assets/img/{{ course.img }}-thumb.jpg" />
+<a class="tile" href="{{ entry.url }}">
+    <img class="tile__img" src="/assets/img/{{ entry.img }}-thumb.jpg" />
     <header class="tile__header">
-        <h3 class="tile__title">{{ course.title }}</h3>
+        <h3 class="tile__title">{{ entry.title }}</h3>
     </header>
     <div class="tile__txt">
-        <div class="tile__amount">{{ course.amount }}</div>
-        <p class="tile__description">{{ course.description }}</p>
-        <div class="tile__price">{{ course.price }}</div>
+        <div class="tile__amount">{{ entry.amount }}</div>
+        <p class="tile__description">{{ entry.description }}</p>
+        <div class="tile__price">{{ entry.price }}</div>
     </div>
 </a>
