--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,4 +11,7 @@ layout: default
             {{ content }}
         </div>
     </div>
+    <div class="container">
+        <img class="post__img" src="/assets/img/{{ page.img }}.jpg" />
+    </div>
 </section>
