--- a/_sass/components.post.scss
+++ b/_sass/components.post.scss
@@ -6,10 +6,6 @@
     @include sm {
         padding: 128px 0 80px;
     }
-
-    @include md {
-        padding: 128px 0;
-    }
 }
 
 .post__header {
@@ -33,7 +29,15 @@
 
 .post__content {
     max-width: 800px;
-    margin: 0 auto;
+    margin: 0 auto $gutter;
+
+    @include sm {
+        margin-bottom: 60px;
+    }
+
+    @include lg {
+        margin-bottom: 100px;
+    }
 
     h2, h3, h4, h5, h6, p, ul {
         margin-bottom: $gutter;
@@ -41,6 +45,11 @@
         &:last-child {
             margin-bottom: 0;
         }
+    }
+
+    h2 {
+        @include font(24px, 500, $lh-copy);
+        color: $brand;
     }
 
     ul {
@@ -61,4 +70,10 @@
         font-family: $serif;
         color: $grey-3;
     }
+}
+
+.post__img {
+    object-fit: cover;
+    width: 100%;
+    height: 40vw;
 }
