--- a/_sass/components.post.scss
+++ b/_sass/components.post.scss
@@ -38,6 +38,10 @@
     h2, h3, h4, h5, h6, p, ul {
         margin-bottom: $gutter;
 
+        @include sm {
+            margin-bottom: $one-half-gutter;
+        }
+
         &:last-child {
             margin-bottom: 0;
         }
@@ -46,15 +50,27 @@
     h2 {
         @include font(24px, 500, $lh-copy);
         color: $brand;
+
+        @include sm {
+            font-size: calculate-rem(28px);
+        }
     }
 
     ul {
         @include font(16px, 500, $lh-copy);
         color: $brand;
+
+        @include sm {
+            font-size: calculate-rem(18px);
+        }
     }
 
     li {
         margin-bottom: 8px;
+
+        @include sm {
+            margin-bottom: 12px;
+        }
 
         &:last-child {
             margin-bottom: 0;
@@ -65,6 +81,10 @@
         @include font(20px, 500, $lh-copy);
         font-family: $serif;
         color: $grey-3;
+
+        @include sm {
+            font-size: calculate-rem(22px);
+        }
     }
 }
 
