--- a/_sass/components.post.scss
+++ b/_sass/components.post.scss
@@ -35,7 +35,13 @@
         margin-bottom: 60px;
     }
 
-    h2, h3, h4, h5, h6, p, ul {
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    p,
+    ul {
         margin-bottom: $gutter;
 
         @include sm {
@@ -92,4 +98,44 @@
     object-fit: cover;
     width: 100%;
     height: calc(160px + 40vw);
+}
+
+.post__data {
+    display: grid;
+    grid-gap: $gutter;
+    font-size: calculate-rem(16px);
+
+    @include sm {
+        grid-gap: $double-gutter;
+        font-size: calculate-rem(20px);
+    }
+
+    @include md {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+.post__col {
+    padding-left: $half-gutter;
+    border-left: 2px solid $brand;
+}
+
+.post__row {
+    display: grid;
+    grid-template-columns: 100px 1fr;
+    margin-bottom: 10px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.post__data-label {
+    font-weight: 500;
+    color: $grey-3;
+}
+
+.post__data-entry {
+    font-weight: 900;
+    color: $brand;
 }
