update design post meta data

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,6 +26,7 @@
 @import "components.header";
 @import "components.intro";
 @import "components.member";
+@import "components.meta";
 @import "components.misc";
 @import "components.pattern";
 @import "components.post";
