add signup on post | related posts

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,6 +32,7 @@
 @import "components.post";
 @import "components.proof";
 @import "components.section-header";
+@import "components.signup";
 @import "components.tile";
 
 // Utilities
