--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <script src="/assets/js/modernizr.js"></script>
 
     <!-- TITLE -->
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }}{% unless page.layout=='default' %} | ziris{% endunless %}</title>
 
 </head>
 
@@ -31,7 +31,8 @@
 
     <!-- JAVASCRIPT -->
     <script src="/assets/js/plugins.bundle.min.js"></script>
-    <script src="/assets/js/ziris.generic.js"></script>
+    <script src="/assets/js/generic.js"></script>
+    <script src="/assets/js/form.js"></script>
 
 </body>
 
